Мій другий комміт

--- a/lesson2/Untitled.html
+++ b/lesson2/Untitled.html
@@ -5,22 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        input{
-            display: block;
-            width: 200px;
-            height: 25px;
-            font-size: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="conv.css">
 </head>
 <body>
-    <label for="UAN">UAN</label>
-        <input id="UAN" type="text">
-    <label for="USD">USD</label>
-        <input id="USD" type="text"> 
-    <label for="EUR">EUR</label>
-        <input id="EUR" type="text">    
+<div class="header">
+     <h1>Conversion money</h1>
+</div>
+<div class="convertator">
+     <div class="canturyUA"></div>
+          <input id="UAN" type="text">
+     <div class="canturyUS"></div>
+          <input id="USD" type="text">
+     <div class="canturyEU"></div>
+          <input id="EUR" type="text">     
+</div>
+        
     <script src = 'Untitled.js'></script>
 </body>
 </html>
