Changes in code: not worked currency calculation

--- a/lesson2/Untitled.html
+++ b/lesson2/Untitled.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="conv.css">
+    <link rel="stylesheet" href="./css/conv.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 <body>
 <div class="header">
@@ -13,11 +14,11 @@
 </div>
 <div class="convertator">
      <div class="canturyUA"></div>
-          <input id="UAN" type="text">
+          <input id="UAN" type="text" placeholder='0.00'>
      <div class="canturyUS"></div>
-          <input id="USD" type="text">
+          <input id="USD" type="text" placeholder='0.00'>
      <div class="canturyEU"></div>
-          <input id="EUR" type="text">     
+          <input id="EUR" type="text" placeholder='0.00'>     
 </div>
         
     <script src = 'Untitled.js'></script>
